--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       // 🔴 Single source of truth for pad hitboxes (fractions of body image)
       const PAD_ZONES = {
         right: { xMin: 0.28, xMax: 0.43, yMin: 0.22, yMax: 0.32 }, // your tweaked coords
-        left:  { xMin: 0.53, xMax: 0.60, yMin: 0.40, yMax: 0.50 }  // your tweaked coords
+        left:  { xMin: 0.57, xMax: 0.78, yMin: 0.45, yMax: 0.70 }  // your tweaked coords
       };
 
       let draggingEl = null;
@@ -397,11 +397,12 @@
           const zR = PAD_ZONES.right;
           const zL = PAD_ZONES.left;
 
-          const rightPadX = hitX >= zR.xMin && hitX <= zR.xMax;
-          const rightPadY = hitY >= zR.yMin && hitY <= zR.yMax;
+          const rightPadX = hitX >= 0.28 && hitX <= 0.43;
+          const rightPadY = hitY >= 0.22 && hitY <= 0.32;
 
-          const leftPadX  = hitX >= zL.xMin && hitX <= zL.xMax;
-          const leftPadY  = hitY >= zL.yMin && hitY <= zL.yMax;
+          // Patient LEFT (image RIGHT) – unchanged
+          const leftPadX  = hitX >= 0.57 && hitX <= 0.78;
+          const leftPadY  = hitY >= 0.45 && hitY <= 0.70;
 
           if (rightPadX && rightPadY && !padRightPlaced) {
             padRightPlaced = true;
